[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spells/necroticspell2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hit_Hurt_Boxes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spells/Necrotic2.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.8056, 14.3611 )

[node name="Necrotic2" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="NecroticSpell2" parent="." instance=ExtResource( 1 )]
frame = 15
offset = Vector2( 2, 5 )

[node name="Fear" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -1 )
scale = Vector2( 0.5625, 0.5625 )
collision_layer = 0
collision_mask = 4
damage = 0

[node name="CollisionShape2D" parent="Fear" index="0"]
position = Vector2( -1.77778, 7.11111 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="NecroticSpell2" to="." method="_on_NecroticSpell2_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="NecroticSpell2"]
[editable path="Fear"]
